# kate-cpp-helper-plugin

./: .gitignore  .kateconfig  CMakeLists.txt  Changes.md  LICENSE  README.md  README.rst  config.h  config.h.in  includehelperplugin.cpp  includehelperplugin.h  includehelperui.rc  includehelperview.h  ktexteditor_includehelper.desktop
cmake/modules/: AddBoostTests.cmake  AddCompileTests.cmake  AddOpenTarget.cmake  AddPackage.cmake  CPackCommonPackageOptions.cmake.in  CPackPackageConfig.cmake.in  DefineDoxyDocsTargetIfPossible.cmake  DefineSkeletonGenerationTargetsIfPossible.cmake  Doxyfile.in  DoxygenDefaults.cmake  DoxygenInstall.cmake.in  FindBoost.cmake  FindClangCLibs.cmake  FindLibClang.cmake  GenerateDoxygenDocumentation.cmake  GetDistribInfo.cmake  GetKeyValueFromShellLikeConfig.cmake  GuessBuildType.cmake  MacroUseCompilerOption.cmake  PreparePCHHeader.cmake.in  TeamCityIntegration.cmake  TestCMakeLists.txt.in  UpdatePCHFile.cmake  UseCompilerOption.cmake  UsePCHFile.cmake  class.tpl.in  class_tester.tpl.in  compile_test.cmake.in  libclang_get_version.cpp  new_class_tester_post.cmake.in  new_class_tester_wrapper.sh.in  new_class_wrapper.sh.in  output-helpers.sh  output_helpers.sh  pch-template.h.in  render_template.cmake.in  tpl_defaults.def.in  unit_tests_main_skeleton.cc  unit_tests_main_skeleton.cc.in
cmake/support/: TestCMakeLists.txt.in  class.tpl  class_tester.tpl  new_class_tester_wrapper.sh.in  new_class_wrapper.sh.in
contrib/: sample.sanitizer-rules
src/: CMakeLists.txt  choose_from_list_dialog.cpp  choose_from_list_dialog.h  clang_code_completion_item.cpp  clang_code_completion_item.h  clang_code_completion_model.cpp  clang_code_completion_model.h  clang_completion_settings.ui  clang_settings.ui  clang_utils.cpp  clang_utils.h  config.h.in  configuration.ui  cpp_helper_plugin.cpp  cpp_helper_plugin.h  cpp_helper_plugin_config.kcfg  cpp_helper_plugin_config.kcfgc  cpp_helper_plugin_config_page.cpp  cpp_helper_plugin_config_page.h  cpp_helper_plugin_session_config.kcfg  cpp_helper_plugin_session_config.kcfgc  cpp_helper_plugin_view.cpp  cpp_helper_plugin_view.h  cpp_helper_plugin_view_document_services.cpp  cpp_helper_plugin_view_explorer.cpp  cpp_helper_plugin_view_search_services.cpp  database_manager.cpp  database_manager.h  database_options.kcfg  database_options.kcfgc  detect_compiler_paths.ui  diagnostic_messages_model.cpp  diagnostic_messages_model.h  document_info.cpp  document_info.h  document_proxy.cpp  document_proxy.h  header_files_cache.h  include_helper_completion_model.cpp  include_helper_completion_model.h  (+36 more)
src/clang/: compiler_options.cpp  compiler_options.h  debug.h  diagnostic_message.h  disposable.h  kind_of.h  location.cpp  location.h  to_string.cpp  to_string.h  unsaved_files_list.cpp  unsaved_files_list.h
src/data/: qt4.incset.in
src/index/: combined_index.cpp  combined_index.h  database.cpp  database.h  document.h  document_extras.cpp  document_extras.h  indexer.cpp  indexer.h  kind.cpp  kind.h  numeric_value_range_processor.cpp  numeric_value_range_processor.h  search_iface.h  search_result.cpp  search_result.h  serialize.h  types.h  utils.cpp  utils.h
src/index/details/: container_info.h  database.h  worker.cpp  worker.h
src/test/: CMakeLists.txt  config.h.in  database_manager_tester.cpp  header_files_cache_tester.cpp  index_utils_tester.cpp  indexer_tester.cpp  indexer_tester.h  indexing_test.cpp  sanitize_snippet_tester.cpp  serialize_tester.cpp  translation_unit_tester.cpp  unsaved_files_list_tester.cpp  utils_tester.cpp
src/test/data/: sample.cpp  test_manifest.in
src/test/data/classes/: test_001.cc  test_002.cc  test_003.cc  test_004.cc  test_005.cc  test_006.cc  test_007.cc  test_008.cc  test_009.cc
src/test/data/fake.db/: manifest
src/test/data/functions/: test_003.cc  test_004.cc  test_005.cc  test_006.cc
src/test/data/typedefs/: test_001.cc  test_002.cc  test_003.cc
src/test/data/variables/: test_001.cc  test_003.cc  test_004.cc  test_008.cc  test_009.cc  test_013.cc  test_014.cc  test_015.cc  test_017.cc  test_018.cc  test_019.cc  test_020.cc  test_021.cc  test_10.cc  test_11.cc  test_13.cc  test_5.cc  test_6.cc  test_7.cc
